--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#800080</color>
     <color name="purple_new">#530253</color>
+    <color name="gray">#7C777C</color>
 </resources>
