--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,4 +49,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/homeToolbar" />
+
+    <Button
+        android:id="@+id/btnServiceTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintEnd_toStartOf="@+id/btnView"
+        app:layout_constraintTop_toBottomOf="@+id/homeToolbar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
